--- a/Opg13/Opg13.csproj
+++ b/Opg13/Opg13.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{09CEBA5A-0F65-4619-94D9-C1EE91AFA773}</ProjectGuid>
+    <ProjectGuid>{808B945A-6768-4165-A37A-506D23A7AD66}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Opg12</RootNamespace>
-    <AssemblyName>Opg12</AssemblyName>
+    <RootNamespace>Opg13</RootNamespace>
+    <AssemblyName>Opg13</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,13 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elev.cs" />
+    <Compile Include="Instruktør.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
