--- a/Opg20 Brug af Using/Opg20 Brug af Using.csproj
+++ b/Opg20 Brug af Using/Opg20 Brug af Using.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F99C902B-885F-4EF0-8F2B-08D0D0F47D74}</ProjectGuid>
+    <ProjectGuid>{F644A918-D2F3-4EC3-B164-E110F02F9218}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Opg19</RootNamespace>
-    <AssemblyName>Opg19</AssemblyName>
+    <RootNamespace>Opg20_Brug_af_Using</RootNamespace>
+    <AssemblyName>Opg20 Brug af Using</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,8 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
